--- a/Assignment1/default.Master
+++ b/Assignment1/default.Master
@@ -22,6 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 <body>
+    <%-- navigation --%>
     <nav class="navbar navbar-inverse">
         <a class="navbar-brand" href="gameCalc.aspx">Assignment 1</a>
     </nav>    <div class="container">        <h1>Game Calculator</h1>
@@ -34,6 +35,7 @@
         </div>
         </form>
     </div>
+    <%-- footer --%>
     <footer class="text-center">
         @2015 - Built May 30, 2015
     </footer>
